# sparrow

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: approval_agent.py  skills_agent.py  weather_agent.py
llmdoc/: index.md
llmdoc/architecture/: capabilities.md  core-and-ports.md  engine-architecture.md  memory-architecture.md
llmdoc/guides/: how-to-build-an-agent.md  how-to-release.md
llmdoc/overview/: project-overview.md
llmdoc/reference/: api-reference.md  conventions-and-gotchas.md
sparrow/: __init__.py  harness.py  llm.py  memory.py  panel_data.py  registry.py
sparrow/adapters/: __init__.py  auto_approver.py  interactive_approver.py  llm_summarizer.py  memory_store.py  openai_llm.py  sqlite_store.py  system_clock.py
sparrow/app/: __init__.py  agent.py  config.py  subagent.py
sparrow/core/: __init__.py  budget.py  loop.py  models.py  schema.py
sparrow/ports/: __init__.py
sparrow/tools/: __init__.py  builtins.py  expr.py  panels.py  registry.py
sparrow/web/: README.md  __init__.py  sparrow-chat.js
tests/: test_adapters.py  test_agent.py  test_core_loop.py  test_engine.py  test_tools.py
