[project]
name = "sparrow-agent"
version = "0.1.0"
description = "A small-but-complete agent harness: ReAct loop, tool injection, three-tier memory, restricted-expression panels. Zero heavy deps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nikefd" }]
keywords = ["agent", "llm", "react", "tool-calling", "deepseek", "harness"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core engine is stdlib-only (urllib/sqlite/ast). No runtime dependencies.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/nikefd/sparrow"
Repository = "https://github.com/nikefd/sparrow"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sparrow*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
