[project]
name = "sparrow-agent"
version = "0.3.0"
description = "A small-but-complete agent harness: hexagonal core with skills, context compaction, stop-reason handling, checkpoint/resume, sub-agent delegation, human-in-the-loop approval, and structured output. Stdlib-only, zero runtime deps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nikefd" }]
keywords = ["agent", "llm", "react", "tool-calling", "deepseek", "harness", "checkpoint", "ports-and-adapters"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core engine is stdlib-only (urllib/sqlite/ast). No runtime dependencies.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/nikefd/sparrow"
Repository = "https://github.com/nikefd/sparrow"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sparrow*"]

[tool.setuptools.package-data]
"sparrow.web" = ["*.js", "*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
